Fix forms spacing and include interests/skills on user signup

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -24,3 +24,7 @@ input[type="submit"] {
 .add-member {
   margin: 15px 0px;
 }
+
+.select2-container {
+  margin-bottom: .75rem;
+}
